# Smart_File_Indexer_-_Search

./: .gitignore  CMakeLists.txt  README.md
include/app/: Application.hpp
include/core/: FileIndex.hpp  FileIndexer.hpp  FileInfo.hpp  SearchEngine.hpp
include/io/: Serializer.hpp
include/utils/: Logger.hpp  Utilities.hpp
src/: main.cpp
src/app/: Application.cpp
src/core/: FileIndex.cpp  FileIndexer.cpp  SearchEngine.cpp
src/io/: Serializer.cpp
src/utils/: Logger.cpp
tests/: CMakeLists.txt
